# ai-translator

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  ai_translator.py  pyproject.toml
docs/: README.md  lemonade-integration-status.md  multi-llm-provider-architecture.md  repo-organization.md
docs/architecture/: multi-provider-architecture.md
docs/integration/: cross-repo-integration.md
docs/plans/: 2026-04-14_185250-multi-provider-phase1.md  2026-04-14_191210-multi-provider-phase2-http-provider.md  2026-04-14_213348-phase3-lemonade-integration-verification.md
docs/templates/dotfiles/: ai-translator-lemonade  load-env.sh  local.env.example
scripts/: check-repo-visibility.sh
tests/: test_cache.py  test_cli_config.py  test_http_provider.py  test_parser.py  test_scripts.py  test_translator.py
