[project]
name = "ai-translator"
version = "0.1.0"
description = "AI 翻譯工具 - 使用 Claude 將中文翻譯為英文，支援批次翻譯、快取和多種輸出格式"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []
license = {text = "MIT"}
authors = [
    {name = "Cleanstation"}
]
keywords = ["ai", "translator", "chinese", "english", "claude"]

[project.scripts]
ai-translator = "ai_translator:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["ai_translator.py"]
